--- a/notebooks/Evaluate_Cryptol_SAW.ipynb
+++ b/notebooks/Evaluate_Cryptol_SAW.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d74dc0f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/UH-Insure/Evaluation.git\n",
+    "%cd Evaluation\n",
+    "!ls -la"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "43dff960",
    "metadata": {},
