fixed task url fixed some type issues

--- a/notebooks/Evaluate_Cryptol_SAW.ipynb
+++ b/notebooks/Evaluate_Cryptol_SAW.ipynb
@@ -48,15 +48,15 @@
    },
    "outputs": [],
    "source": [
-    "MODEL_A = \"j05hr3d/peft-FT-3-Coder-30b-v3\"  #@param {type:\"string\"}\n",
-    "MODEL_B = \"tam2003/peft-FT-3-Coder-30b-v3\"  #@param {type:\"string\"}\n",
-    "CHOOSE = \"A\"  #@param [\"A\", \"B\", \"Custom\"]\n",
-    "CUSTOM  = \"\"  #@param {type:\"string\"}\n",
-    "TASKS_PATH = \"../eval/prompts/tasks.jsonl\"  #@param {type:\"string\"}\n",
-    "K = 5  #@param {type:\"integer\"}\n",
-    "MAX_NEW_TOKENS_DEFAULT = 512  #@param {type:\"integer\"}\n",
-    "SEED = 42  #@param {type:\"integer\"}\n",
-    "USE_DRIVE = False  #@param {type:\"boolean\"}\n",
+    "MODEL_A = \"j05hr3d/peft-FT-3-Coder-30b-v3\"  \n",
+    "MODEL_B = \"tam2003/peft-FT-3-Coder-30b-v3\"  \n",
+    "CHOOSE = \"A\"  \n",
+    "CUSTOM  = \"\" \n",
+    "TASKS_PATH = \"eval/prompts/tasks.jsonl\" \n",
+    "K = 5 \n",
+    "MAX_NEW_TOKENS_DEFAULT = 512 \n",
+    "SEED = 42  \n",
+    "USE_DRIVE = False  \n",
     "\n",
     "def pick(ch, a, b, c):\n",
     "  if ch == \"A\": return a\n",
@@ -172,7 +172,6 @@
    },
    "outputs": [],
    "source": [
-    "#@title 5) Generate helper\n",
     "def generate_code(prompt:str, max_new_tokens:int=512, temperature:float=0.7, top_p:float=0.95, do_sample:bool=True):\n",
     "  input_ids = tokenizer(prompt, return_tensors='pt').input_ids.to(model.device)\n",
     "  with torch.no_grad():\n",
